Update branch build with custom depends logic

--- a/.github/workflows/build-test-package.yml
+++ b/.github/workflows/build-test-package.yml
@@ -6,6 +6,9 @@ on:
       version:
         required: true
         type: string
+      payload:
+        required: false
+        type: string
 
 defaults:
   run:
@@ -13,29 +16,29 @@ defaults:
 
 jobs:
 
+  get-dependency-details:
+    uses: "./.github/workflows/get-dependency-details.yml"
+    secrets: inherit
+    with:
+      owner: "apbassett"
+      repo: "amalgam"
+      payload: "${{ inputs.payload }}"
+
   build:
+    needs: ['get-dependency-details']
     runs-on: ubuntu-latest
     permissions:
       contents: write
-    outputs:
-      amalgam-version: ${{ steps.get-amalgam-version.outputs.amalgam-version }}
     steps:
     - uses: actions/checkout@v3
 
-    - name: Get Amalgam dependency version
-      id: get-amalgam-version
-      run: |
-        AMALGAM_VERSION=$(jq -r ".dependencies.amalgam" ./version.json)
-        echo "amalgam-version=$(echo $AMALGAM_VERSION)" >> $GITHUB_OUTPUT
-
     - name: Download Amalgam
-      uses: robinraju/release-downloader@v1.8
-      with:
-        repository: "howsoai/amalgam"
-        tag: ${{ steps.get-amalgam-version.outputs.amalgam-version }}
-        fileName: "*linux-amd64*"
-        out-file-path: "target"
-        extract: true
+      env:
+        GH_TOKEN: ${{ github.token }}
+      run: |
+        gh ${{ needs.get-dependency-details.outputs.run-type }} download -D target -R "apbassett/amalgam" -p "*linux-amd64*" "${{ needs.get-dependency-details.outputs.run-id }}"
+        # Needed because release/non-release downloads are different structure
+        cd target && if [ ! -f *.tar.gz ]; then mv */*.tar.gz ./; fi && tar -xvzf *.tar.gz
 
     - name: Build
       run: |
@@ -49,19 +52,18 @@ jobs:
         if-no-files-found: error
 
   test-linux-amd64:
-    needs: ['build']
+    needs: ['get-dependency-details', 'build']
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
 
     - name: Download Amalgam
-      uses: robinraju/release-downloader@v1.8
-      with:
-        repository: "howsoai/amalgam"
-        tag: ${{ needs.build.outputs.amalgam-version }}
-        fileName: "*linux-amd64*"
-        out-file-path: "target"
-        extract: true
+      env:
+        GH_TOKEN: ${{ github.token }}
+      run: |
+        gh ${{ needs.get-dependency-details.outputs.run-type }} download -D target -R "apbassett/amalgam" -p "*linux-amd64*" "${{ needs.get-dependency-details.outputs.run-id }}"
+        # Needed because release/non-release downloads are different structure
+        cd target && if [ ! -f *.tar.gz ]; then mv */*.tar.gz ./; fi && tar -xvzf *.tar.gz
 
     - name: Amalgam version
       run: |
@@ -73,19 +75,18 @@ jobs:
         ./build.sh test ${{ inputs.version }}
 
   test-macos-amd64:
-    needs: ['build']
+    needs: ['get-dependency-details', 'build']
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v3
 
     - name: Download Amalgam
-      uses: robinraju/release-downloader@v1.8
-      with:
-        repository: "howsoai/amalgam"
-        tag: ${{ needs.build.outputs.amalgam-version }}
-        fileName: "*darwin-amd64*"
-        out-file-path: "target"
-        extract: true
+      env:
+        GH_TOKEN: ${{ github.token }}
+      run: |
+        gh ${{ needs.get-dependency-details.outputs.run-type }} download -D target -R "apbassett/amalgam" -p "*darwin-amd64*" "${{ needs.get-dependency-details.outputs.run-id }}"
+        # Needed because release/non-release downloads are different structure
+        cd target && if [ ! -f *.tar.gz ]; then mv */*.tar.gz ./; fi && tar -xvzf *.tar.gz
 
     # GitHub macos runner does not support AVX
     - name: Amalgam version
@@ -97,19 +98,18 @@ jobs:
         ./build.sh test ${{ inputs.version }}
 
   test-windows-amd64:
-    needs: ['build']
+    needs: ['get-dependency-details', 'build']
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v3
 
     - name: Download Amalgam
-      uses: robinraju/release-downloader@v1.8
-      with:
-        repository: "howsoai/amalgam"
-        tag: ${{ needs.build.outputs.amalgam-version }}
-        fileName: "*windows-amd64*"
-        out-file-path: "target"
-        extract: true
+      env:
+        GH_TOKEN: ${{ github.token }}
+      run: |
+        gh ${{ needs.get-dependency-details.outputs.run-type }} download -D target -R "apbassett/amalgam" -p "*windows-amd64*" "${{ needs.get-dependency-details.outputs.run-id }}"
+        # Needed because release/non-release downloads are different structure
+        cd target && if [ ! -f *.tar.gz ]; then mv */*.tar.gz ./; fi && tar -xvzf *.tar.gz
 
     - name: Download tz data
       shell: pwsh
