--- a/.github/workflows/build-test-package.yml
+++ b/.github/workflows/build-test-package.yml
@@ -20,7 +20,7 @@ jobs:
     uses: "./.github/workflows/get-dependency-details.yml"
     secrets: inherit
     with:
-      owner: "apbassett"
+      owner: "howsoai"
       repo: "amalgam"
       payload: "${{ inputs.payload }}"
 
@@ -36,7 +36,7 @@ jobs:
       env:
         GH_TOKEN: ${{ github.token }}
       run: |
-        gh ${{ needs.get-dependency-details.outputs.run-type }} download -D target -R "apbassett/amalgam" -p "*linux-amd64*" "${{ needs.get-dependency-details.outputs.run-id }}"
+        gh ${{ needs.get-dependency-details.outputs.run-type }} download -D target -R "howsoai/amalgam" -p "*linux-amd64*" "${{ needs.get-dependency-details.outputs.run-id }}"
         # Needed because release/non-release downloads are different structure
         cd target && if [ ! -f *.tar.gz ]; then mv */*.tar.gz ./; fi && tar -xvzf *.tar.gz
 
@@ -61,7 +61,7 @@ jobs:
       env:
         GH_TOKEN: ${{ github.token }}
       run: |
-        gh ${{ needs.get-dependency-details.outputs.run-type }} download -D target -R "apbassett/amalgam" -p "*linux-amd64*" "${{ needs.get-dependency-details.outputs.run-id }}"
+        gh ${{ needs.get-dependency-details.outputs.run-type }} download -D target -R "howsoai/amalgam" -p "*linux-amd64*" "${{ needs.get-dependency-details.outputs.run-id }}"
         # Needed because release/non-release downloads are different structure
         cd target && if [ ! -f *.tar.gz ]; then mv */*.tar.gz ./; fi && tar -xvzf *.tar.gz
 
@@ -84,7 +84,7 @@ jobs:
       env:
         GH_TOKEN: ${{ github.token }}
       run: |
-        gh ${{ needs.get-dependency-details.outputs.run-type }} download -D target -R "apbassett/amalgam" -p "*darwin-amd64*" "${{ needs.get-dependency-details.outputs.run-id }}"
+        gh ${{ needs.get-dependency-details.outputs.run-type }} download -D target -R "howsoai/amalgam" -p "*darwin-amd64*" "${{ needs.get-dependency-details.outputs.run-id }}"
         # Needed because release/non-release downloads are different structure
         cd target && if [ ! -f *.tar.gz ]; then mv */*.tar.gz ./; fi && tar -xvzf *.tar.gz
 
@@ -107,7 +107,7 @@ jobs:
       env:
         GH_TOKEN: ${{ github.token }}
       run: |
-        gh ${{ needs.get-dependency-details.outputs.run-type }} download -D target -R "apbassett/amalgam" -p "*windows-amd64*" "${{ needs.get-dependency-details.outputs.run-id }}"
+        gh ${{ needs.get-dependency-details.outputs.run-type }} download -D target -R "howsoai/amalgam" -p "*windows-amd64*" "${{ needs.get-dependency-details.outputs.run-id }}"
         # Needed because release/non-release downloads are different structure
         cd target && if [ ! -f *.tar.gz ]; then mv */*.tar.gz ./; fi && tar -xvzf *.tar.gz
 
