17464: Adds arm tests

--- a/.github/workflows/build-test-package.yml
+++ b/.github/workflows/build-test-package.yml
@@ -55,6 +55,14 @@ jobs:
     needs: ['get-dependency-details', 'build']
     runs-on: ubuntu-latest
     steps:
+
+    - name: Collect Workflow Telemetry
+      uses: runforesight/workflow-telemetry-action@v1
+      with:
+        comment_on_pr: off
+        proc_trace_chart_show: off
+        proc_trace_table_show: off
+
     - uses: actions/checkout@v3
 
     - name: Download Amalgam
@@ -65,19 +73,104 @@ jobs:
         # Needed because release/non-release downloads are different structure
         cd target && if [ ! -f *.tar.gz ]; then mv */*.tar.gz ./; fi && tar -xvzf *.tar.gz
 
-    - name: Amalgam version
-      run: |
-        ${{ github.workspace }}/target/bin/amalgam-mt --version
-
     - name: Test
       run: |
-        sudo locale-gen es_ES.utf8
+        sudo locale-gen es_ES.UTF-8
         ./build.sh test ${{ inputs.version }}
+
+  test-linux-arm64:
+    if: true
+    needs: ['get-dependency-details', 'build']
+    runs-on: ubuntu-latest
+    steps:
+
+    - name: Collect Workflow Telemetry
+      uses: runforesight/workflow-telemetry-action@v1
+      with:
+        comment_on_pr: off
+        proc_trace_chart_show: off
+        proc_trace_table_show: off
+
+    - uses: actions/checkout@v3
+
+    - name: Download Amalgam
+      env:
+        GH_TOKEN: ${{ github.token }}
+      run: |
+        SEARCH_POSTFIX=""
+        if [[ "${{ needs.get-dependency-details.outputs.run-type }}" == "release" ]]; then
+          SEARCH_POSTFIX=".tar.gz"
+        fi
+
+        gh ${{ needs.get-dependency-details.outputs.run-type }} download -D target -R "howsoai/amalgam" -p "*linux-arm64${SEARCH_POSTFIX}" "${{ needs.get-dependency-details.outputs.run-id }}"
+        # Needed because release/non-release downloads are different structure
+        cd target && if [ ! -f *.tar.gz ]; then mv */*.tar.gz ./; fi && tar -xvzf *.tar.gz
+
+    - name: Test
+      uses: pguyot/arm-runner-action@v2
+      with:
+        base_image: raspios_lite_arm64:latest
+        cpu: cortex-a8
+        image_additional_mb: 1000
+        commands: |
+          set -e
+
+          sudo apt-get install --no-install-recommends -y git jq
+          sudo sed -i "s/en_GB.UTF-8/es_ES.UTF-8/g" /etc/locale.gen
+          sudo locale-gen es_ES.UTF-8 UTF-8
+
+          ./build.sh test ${{ inputs.version }}
+
+  test-linux-arm64_8a:
+    if: true
+    needs: ['get-dependency-details', 'build']
+    runs-on: ubuntu-latest
+    steps:
+
+    - name: Collect Workflow Telemetry
+      uses: runforesight/workflow-telemetry-action@v1
+      with:
+        comment_on_pr: off
+        proc_trace_chart_show: off
+        proc_trace_table_show: off
+
+    - uses: actions/checkout@v3
+
+    - name: Download Amalgam
+      env:
+        GH_TOKEN: ${{ github.token }}
+      run: |
+        gh ${{ needs.get-dependency-details.outputs.run-type }} download -D target -R "howsoai/amalgam" -p "*linux-arm64_8a*" "${{ needs.get-dependency-details.outputs.run-id }}"
+        # Needed because release/non-release downloads are different structure
+        cd target && if [ ! -f *.tar.gz ]; then mv */*.tar.gz ./; fi && tar -xvzf *.tar.gz
+
+    - name: Test
+      uses: pguyot/arm-runner-action@v2
+      with:
+        base_image: raspios_lite_arm64:latest
+        cpu: cortex-a7
+        image_additional_mb: 1000
+        commands: |
+          set -e
+
+          sudo apt-get install --no-install-recommends -y git jq
+          sudo sed -i "s/en_GB.UTF-8/es_ES.UTF-8/g" /etc/locale.gen
+          sudo locale-gen es_ES.UTF-8 UTF-8
+
+          ./build.sh test ${{ inputs.version }} arm64_8a
 
   test-macos-amd64:
     needs: ['get-dependency-details', 'build']
     runs-on: macos-latest
     steps:
+
+    - name: Collect Workflow Telemetry
+      uses: runforesight/workflow-telemetry-action@v1
+      with:
+        comment_on_pr: off
+        proc_trace_chart_show: off
+        proc_trace_table_show: off
+
     - uses: actions/checkout@v3
 
     - name: Download Amalgam
@@ -88,11 +181,6 @@ jobs:
         # Needed because release/non-release downloads are different structure
         cd target && if [ ! -f *.tar.gz ]; then mv */*.tar.gz ./; fi && tar -xvzf *.tar.gz
 
-    # GitHub macos runner does not support AVX
-    - name: Amalgam version
-      run: |
-        ${{ github.workspace }}/target/bin/amalgam-mt-noavx --version
-
     - name: Test
       run: |
         ./build.sh test ${{ inputs.version }}
@@ -101,6 +189,14 @@ jobs:
     needs: ['get-dependency-details', 'build']
     runs-on: windows-latest
     steps:
+
+    - name: Collect Workflow Telemetry
+      uses: runforesight/workflow-telemetry-action@v1
+      with:
+        comment_on_pr: off
+        proc_trace_chart_show: off
+        proc_trace_table_show: off
+
     - uses: actions/checkout@v3
 
     - name: Download Amalgam
@@ -115,10 +211,6 @@ jobs:
       shell: pwsh
       run: |
         ./build/powershell/Download-Tzdata.ps1
-
-    - name: Amalgam version
-      run: |
-        "${{ github.workspace }}/target/bin/amalgam-mt.exe" --version
 
     - name: Test
       run: |
