Add build-type for excluding jobs

--- a/.github/workflows/build-test-package.yml
+++ b/.github/workflows/build-test-package.yml
@@ -9,6 +9,9 @@ on:
       payload:
         required: false
         type: string
+      build-type:
+        required: true
+        type: string
 
 defaults:
   run:
@@ -79,7 +82,7 @@ jobs:
         ./build.sh test ${{ inputs.version }}
 
   test-linux-arm64:
-    if: true
+    if: inputs.build-type != 'PR'
     needs: ['get-dependency-details', 'build']
     runs-on: ubuntu-latest
     steps:
@@ -122,7 +125,7 @@ jobs:
           ./build.sh test ${{ inputs.version }}
 
   test-linux-arm64_8a:
-    if: true
+    if: inputs.build-type != 'PR'
     needs: ['get-dependency-details', 'build']
     runs-on: ubuntu-latest
     steps:
