--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,7 @@ jobs:
     secrets: inherit
     with:
       version: ${{ inputs.version }}
+      build-type: "release"
 
   create-release:
     needs: ['build-test-package']
