--- a/.github/workflows/create-branch-build.yml
+++ b/.github/workflows/create-branch-build.yml
@@ -65,6 +65,7 @@ jobs:
     with:
       version: ${{ needs.set-branch-version.outputs.version }}
       payload: ${{ inputs.payload }}
+      build-type: "branch"
 
   # This job is here to have only one final step to add for "Status Checks"
   # in GitHub, instead of adding every leaf test from 'build-test-package'
