--- a/.github/workflows/create-pr-build.yml
+++ b/.github/workflows/create-pr-build.yml
@@ -51,6 +51,7 @@ jobs:
     secrets: inherit
     with:
       version: ${{ needs.set-pr-version.outputs.version }}
+      build-type: "PR"
 
   # This job is here to have only one final step to add for "Status Checks"
   # in GitHub, instead of adding every leaf test from 'build-test-package'
