18766: Bumps amalgam depends version

--- a/.github/workflows/build-test-package.yml
+++ b/.github/workflows/build-test-package.yml
@@ -164,7 +164,7 @@ jobs:
 
   test-macos-amd64:
     needs: ['get-dependency-details', 'build']
-    runs-on: macos-latest
+    runs-on: macos-latest-large
     steps:
 
     - name: Collect Workflow Telemetry
