--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,5 @@ performance_tests/bank_gen.csv
 # Ignore MacOS Hidden File
 .DS_Store
 
-# scratch Amalgam scripts
-scratch*.amlg
+# scratch
+scratch*
