Improves reliability of release notes

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,8 +20,13 @@ jobs:
       version: ${{ inputs.version }}
       build-type: "release"
 
-  create-release:
+  generate-changelog:
+    secrets: inherit
     needs: ['build-test-package']
+    uses: "howsoai/.github/.github/workflows/release-notes.yml@main"
+
+  create-release:
+    needs: ['build-test-package', 'generate-changelog']
     runs-on: ubuntu-latest
     steps:
 
@@ -35,7 +40,7 @@ jobs:
         commit: ${{ github.sha }}
         name: "Howso Engine ${{ inputs.version }}"
         artifactErrorsFailBuild: true
-        generateReleaseNotes: true
+        body: ${{ needs.generate-changelog.outputs.changelog }}
         makeLatest: legacy
         artifacts: howso-engine-*/howso-engine-*.tar.gz
         artifactContentType: application/gzip
