--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,6 @@ performance_tests/bank_gen.csv
 # Ignore MacOS Hidden File
 .DS_Store
 
-# scratch
+# scratch and temporary trial files
 scratch*
+research.amlg
