Adds debug mode to linux/amd64 tests

--- a/.github/workflows/build-test-package.yml
+++ b/.github/workflows/build-test-package.yml
@@ -79,7 +79,7 @@ jobs:
     - name: Test
       run: |
         sudo locale-gen es_ES.UTF-8
-        ./build.sh test ${{ inputs.version }}
+        ./build_debug.sh test ${{ inputs.version }}
 
   test-linux-arm64:
     if: inputs.build-type != 'PR'
