#21177 Fix HSE repo name in perf test

--- a/.github/workflows/performance-test.yml
+++ b/.github/workflows/performance-test.yml
@@ -58,7 +58,7 @@ jobs:
       env:
         GH_TOKEN: ${{ github.token }}
       run: |
-        gh ${{ needs.amalgam-version.outputs.run-type }} download -D target -R "howsoai/amalgam" -p "*linux-amd64*" "${{ needs.amalgam.outputs.run-id }}"
+        gh ${{ needs.amalgam-version.outputs.run-type }} download -D target -R "howsoai/amalgam" -p "*linux-amd64*" "${{ needs.amalgam-version.outputs.run-id }}"
         # Needed because release/non-release downloads are different structure
         cd target && if [ ! -f amalgam-*.tar.gz ]; then mv */amalgam-*.tar.gz ./; fi && tar -xvzf amalgam-*.tar.gz
         ln -s . target
@@ -67,7 +67,7 @@ jobs:
       env:
         GH_TOKEN: ${{ github.token }}
       run: |
-        gh ${{ needs.howso-engine-version.outputs.run-type }} download -D target -R "howsoai/amalgam" -p "*linux-amd64*" "${{ needs.howso-engine-version.outputs.run-id }}"
+        gh ${{ needs.howso-engine-version.outputs.run-type }} download -D target -R "howsoai/howso-engine" "${{ needs.howso-engine-version.outputs.run-id }}"
         # Needed because release/non-release downloads are different structure
         cd target && if [ ! -f howso-engine-*.tar.gz ]; then mv */howso-engine-*.tar.gz ./; fi && tar -xvzf howso-engine-*.tar.gz
 
