#21177 Fix final perftest log message
...lest the test report "failure" when all the tests ran.

--- a/.github/workflows/performance-test.yml
+++ b/.github/workflows/performance-test.yml
@@ -82,7 +82,7 @@ jobs:
         sudo locale-gen es_ES.UTF-8
         cd target
         ./bin/amalgam-mt --debug-internal-memory ./run_performance_tests.amlg | tee /tmp/pt_results
-        if ! grep -q 'PASSED : Total comprehensive test execution time' /tmp/pt_results; then
+        if ! grep -q 'PASSED : Total test execution time' /tmp/pt_results; then
           cat /tmp/pt_results
           exit 81
         fi
