git ignore tweak

--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@ test.amlg
 local/
 
 # Test output
-performance_tests/bank_gen.csv
+performance_tests/*.csv
 
 # Ignore MacOS Hidden File
 .DS_Store
