21239: Reduces references in Trainee attributes (#251)
Using (replace) to reduce the amount of references that are stored into
the Trainee's attributes.

---------

Co-authored-by: howsohazard <143410553+howsohazard@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@ test.amlg
 local/
 
 # Test output
-performance_tests/bank_gen.csv
+performance_tests/*.csv
 
 # Ignore MacOS Hidden File
 .DS_Store
@@ -38,3 +38,6 @@ performance_tests/bank_gen.csv
 # scratch and temporary trial files
 scratch*
 research.amlg
+
+# trace files
+**/**.trace
