Updated .gitignore to exclude programatically generated unit tests.

--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,8 @@ target/
 !.vscode/settings.json
 
 #unit test output files
-uttest_model/
-uttest_model.*
+ut_test_model/
+ut_test_model.*
 .vscode/settings.json
 test.amlg
 
