fix path to build.sh

--- a/.github/workflows/performance-test.yml
+++ b/.github/workflows/performance-test.yml
@@ -39,7 +39,7 @@ jobs:
       owner: "howsoai"
       repo: "howso-engine"
       payload: "${{ inputs.payload }}"
-        
+
   performance-test-linux-amd64:
     needs: [amalgam-version, howso-engine-version]
     runs-on: ubuntu-latest
@@ -73,7 +73,7 @@ jobs:
 
     - name: Set up performance test environment
       run: |
-        cp run_performance_tests.amlg build.sh target/
+        cp run_performance_tests.amlg ./build/build.sh target/
         cp -a performance_tests target/
         cd target && sed -i.bak -e s@howso.amlg@howso.caml@ performance_tests/*.amlg
 
