Updates build script for new Amalgam artifact name pattern

--- a/.github/workflows/build-test-package.yml
+++ b/.github/workflows/build-test-package.yml
@@ -39,7 +39,12 @@ jobs:
       env:
         GH_TOKEN: ${{ github.token }}
       run: |
-        gh ${{ needs.get-dependency-details.outputs.run-type }} download -D target -R "howsoai/amalgam" -p "*linux-amd64*" "${{ needs.get-dependency-details.outputs.run-id }}"
+        run_type=${{ needs.get-dependency-details.outputs.run-type }}
+        if [[ "$run_type" == "release" ]]; then
+          gh $run_type download -D target -R "howsoai/amalgam" -p "*linux-amd64.tar.gz" "${{ needs.get-dependency-details.outputs.run-id }}"
+        else
+          gh $run_type download -D target -R "howsoai/amalgam" -p "*linux-amd64" "${{ needs.get-dependency-details.outputs.run-id }}"
+        fi
         # Needed because release/non-release downloads are different structure
         cd target && if [ ! -f *.tar.gz ]; then mv */*.tar.gz ./; fi && tar -xvzf *.tar.gz
 
@@ -72,7 +77,12 @@ jobs:
       env:
         GH_TOKEN: ${{ github.token }}
       run: |
-        gh ${{ needs.get-dependency-details.outputs.run-type }} download -D target -R "howsoai/amalgam" -p "*linux-amd64*" "${{ needs.get-dependency-details.outputs.run-id }}"
+        run_type=${{ needs.get-dependency-details.outputs.run-type }}
+        if [[ "$run_type" == "release" ]]; then
+          gh $run_type download -D target -R "howsoai/amalgam" -p "*linux-amd64.tar.gz" "${{ needs.get-dependency-details.outputs.run-id }}"
+        else
+          gh $run_type download -D target -R "howsoai/amalgam" -p "*linux-amd64" "${{ needs.get-dependency-details.outputs.run-id }}"
+        fi
         # Needed because release/non-release downloads are different structure
         cd target && if [ ! -f *.tar.gz ]; then mv */*.tar.gz ./; fi && tar -xvzf *.tar.gz
 
