Fixes performance test build failure due to recent Amalgam changes

--- a/.github/workflows/performance-test.yml
+++ b/.github/workflows/performance-test.yml
@@ -58,7 +58,12 @@ jobs:
       env:
         GH_TOKEN: ${{ github.token }}
       run: |
-        gh ${{ needs.amalgam-version.outputs.run-type }} download -D target -R "howsoai/amalgam" -p "*linux-amd64*" "${{ needs.amalgam-version.outputs.run-id }}"
+        run_type=${{ needs.amalgam-version.outputs.run-type }}
+        if [[ "$run_type" == "release" ]]; then
+          gh $run_type download -D target -R "howsoai/amalgam" -p "*linux-amd64.tar.gz" "${{ needs.amalgam-version.outputs.run-id }}"
+        else
+          gh $run_type download -D target -R "howsoai/amalgam" -p "*linux-amd64" "${{ needs.amalgam-version.outputs.run-id }}"
+        fi
         # Needed because release/non-release downloads are different structure
         cd target && if [ ! -f amalgam-*.tar.gz ]; then mv */amalgam-*.tar.gz ./; fi && tar -xvzf amalgam-*.tar.gz
         ln -s . target
