--- a/.github/workflows/build-test-package.yml
+++ b/.github/workflows/build-test-package.yml
@@ -121,12 +121,7 @@ jobs:
 
     - name: Test
       run: |
-        set -e
-
-        sudo apt-get install --no-install-recommends -y git jq
-        sudo sed -i "s/en_GB.UTF-8/es_ES.UTF-8/g" /etc/locale.gen
-        sudo locale-gen es_ES.UTF-8 UTF-8
-
+        sudo locale-gen es_ES.UTF-8
         ./build/build.sh test ${{ inputs.version }}
 
   test-linux-arm64_8a:
@@ -154,12 +149,7 @@ jobs:
 
     - name: Test
       run: |
-        set -e
-
-        sudo apt-get install --no-install-recommends -y git jq
-        sudo sed -i "s/en_GB.UTF-8/es_ES.UTF-8/g" /etc/locale.gen
-        sudo locale-gen es_ES.UTF-8 UTF-8
-
+        sudo locale-gen es_ES.UTF-8
         ./build/build.sh test ${{ inputs.version }} arm64_8a
 
   test-macos-amd64:
