Enable larger test runner for performance tests

--- a/.github/workflows/performance-test.yml
+++ b/.github/workflows/performance-test.yml
@@ -42,7 +42,7 @@ jobs:
 
   performance-test-linux-amd64:
     needs: [amalgam-version, howso-engine-version]
-    runs-on: ubuntu-latest
+    runs-on: howso-ubuntu-runner-xlarge-24.04
     steps:
 
     - name: Collect Workflow Telemetry
