Performance enhancement and gitignore upgrades

--- a/.gitignore
+++ b/.gitignore
@@ -31,11 +31,15 @@ local/
 
 # Test output
 performance_tests/*.csv
+results/
+research/
 
 # Ignore MacOS Hidden File
 .DS_Store
 
 # scratch and temporary trial files
+*.py
+*.ipynb
 scratch*
 research.amlg
 
