Run unit tests on multiple Ubuntu/GLIBC versions

--- a/.github/workflows/build-test-package.yml
+++ b/.github/workflows/build-test-package.yml
@@ -61,7 +61,10 @@ jobs:
 
   test-linux-amd64:
     needs: ['get-dependency-details', 'build']
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-22.04, ubuntu-24.04]
+    runs-on: ${{ matrix.os }}
     steps:
 
     - name: Collect Workflow Telemetry
