Print glibc version

--- a/.github/workflows/build-test-package.yml
+++ b/.github/workflows/build-test-package.yml
@@ -91,6 +91,8 @@ jobs:
 
     - name: Test
       run: |
+        # Print glibc version
+        ldd --version
         sudo locale-gen es_ES.UTF-8
         ./build/build.sh test ${{ inputs.version }}
 
